common/style.css
@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap'); 

@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face { 
  font-family: "pixel"; 
  src: url("./assets/fonts/Pixel.woff2") format("woff2"), 
       url("./assets/fonts/Pixel.woff") format("woff"); 
} 


:root {
  font-family: "Rubik", Arial, sans-serif;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

* {
  box-sizing: border-box;
}

h1, h2, h3, h4, h5, h6 {
  margin: 0 !important;
}

body {
  min-width: 15rem;
}

label input[type="checkbox"] {
  display: none;
}

label input + div.switch{
  @apply w-6 h-4 shadow ring-1 ring-neutral-300 dark:ring-neutral-800 bg-neutral-50 dark:bg-neutral-900 rounded-full p-1 duration-300 hover:before:bg-neutral-500 dark:hover:before:bg-neutral-400 active:before:translate-x-1
  before:block before:size-2 before:bg-neutral-400 dark:before:bg-neutral-500 before:rounded-full before:duration-300;
}

label input:checked + div.switch{
  @apply bg-[--accent-color] ring-0 active:before:translate-x-1 hover:before:bg-neutral-200 dark:hover:before:bg-neutral-800
  before:translate-x-2 before:bg-white dark:before:bg-neutral-950 before:scale-150;
}

button.btn {
  @apply px-2 py-1 text-xs font-semibold text-center rounded-md bg-neutral-50 dark:bg-neutral-950 shadow-sm border-2 border-neutral-200 dark:border-neutral-800 duration-200
  hover:border-[--accent-color] hover:shadow-lg;
}
button.btn2 {
  @apply relative isolate overflow-hidden px-2 py-1 text-xs font-semibold text-center rounded-md bg-neutral-50 dark:bg-neutral-950 shadow-sm border-2 border-neutral-200 dark:border-neutral-800 duration-200
  before:absolute before:-z-10 before:w-full before:h-full before:top-0 before:left-0 before:bg-[--accent-color] before:opacity-0 hover:before:opacity-20 hover:dark:before:opacity-30 before:duration-300
  hover:border-[--accent-color] hover:shadow-lg;
}


.pixelated {
  @apply font-pixel text-[120%]
}

